--- a/wallet/index.html
+++ b/wallet/index.html
@@ -3,27 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Debitable</title>
-  <link rel="shortcut icon" href="icon.png">
-  <meta name="author" content="Ctrl Alt Defeat">
+  <link rel="shortcut icon" href="assets/images/icon.png">
+  <meta name="author" content="Apratim Shukla">
   <meta name="description" content="One-stop blockchain based banking system">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css'>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700'>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/loader.css') }}">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/loader.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
 
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<script type="module" src="/dist/index.js"></script>
-<script src="{{ url_for('static', filename='js/inject-script.js') }}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
-
 <!-- github-ribbon -->
-<a href="https://github.com/ExpoDB/Nexres-Debitable" target="_blank" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:rgba(0,0,0,1); color:#fff; z-index:7; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out;}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+<a href="https://github.com/ResilientApp/Debitable" target="_blank" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:rgba(0,0,0,1); color:#fff; z-index:7; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out;}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 <!-- //github-ribbon -->
 
 <!-- Loader -->
@@ -72,12 +67,12 @@
           </span> 
         </div>
         <div class="btc">
-          Powered by <b>Nexres</b>
+          Powered by <b>ResilientDB</b>
         </div>
       </div>
     </div>
     <div class="ctas">
-      <button class="receive" onclick="newWallet()" id="fetchAccountAddress">New Account</button>
+      <button class="receive" id="fetchAccountAddress">New Account</button>
       <button class="send" onclick="loginWallet()">Login</button>
     </div>
   </div>
@@ -108,7 +103,7 @@
           </span> 
         </div>
         <div class="btc">
-          Powered by <b>Nexres</b>
+          Powered by <b>ResilientDB</b>
         </div>
       </div>
     </div>
@@ -117,7 +112,7 @@
           <input type="text" placeholder="Enter your Identification Address" id="id">
         </div>
         <span></span>
-        <button type="submit" class="send" id="authenticate" onclick="authenticate();">Authenticate</button>
+        <button type="submit" class="send" id="authenticate">Authenticate</button>
     </div>
   </div>
     
@@ -153,7 +148,7 @@
     </div>
     <div class="ctas" id="uButton">
       <button class="receive" onclick="backWithdraw()"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back</button>
-      <button class="send" id="withdraw" onclick="withdraw()"><i class="fa fa-caret-square-o-up" aria-hidden="true"></i> Send</button>
+      <button class="send" id="withdraw"><i class="fa fa-caret-square-o-up" aria-hidden="true"></i> Send</button>
     </div>
     <div class="component" id="wId">
       <button class="send" id="idaddress" onclick="copy()">Identification Address</button>
@@ -204,60 +199,53 @@
 </div>
 
 <script>
-  function newWallet() {
-    createBankAccount();
-  }
 
-  function authenticate() {
-    login();
-  }
+function loginWallet() {
+  $("#initial").fadeOut("normal", function() {
+        $("#login").fadeIn("normal");
+  });
+}
 
-  function loginWallet() {
-    $("#initial").fadeOut("normal", function() {
-          $("#login").fadeIn("normal");
-    });
-  }
+function transformWithdraw() {
+  $("#wId").fadeOut("normal", function() {
+    $("#wAmount").fadeIn("normal");
+    $("#wAddress").fadeIn("normal");
+  })
 
-  function transformWithdraw() {
-    $("#wId").fadeOut("normal", function() {
-      $("#wAmount").fadeIn("normal");
-      $("#wAddress").fadeIn("normal");
+  $("#wButton").fadeOut("normal", function() {
+    $("#uButton").fadeIn("normal");
+  })
+}
+
+function backWithdraw() {
+  $("#wAmount").fadeOut("normal", function() { 
+    $("#wAddress").fadeOut("normal", function() { 
+    $("#wId").fadeIn("normal");
     })
+  })
 
-    $("#wButton").fadeOut("normal", function() {
-      $("#uButton").fadeIn("normal");
-    })
-  }
+  $("#uButton").fadeOut("normal", function() {
+    $("#wButton").fadeIn("normal");
+  })
+}
 
-  function backWithdraw() {
-    $("#wAmount").fadeOut("normal", function() { 
-      $("#wAddress").fadeOut("normal", function() { 
-      $("#wId").fadeIn("normal");
-      })
-    })
+function signout() {
+  localStorage.clear();
+  window.location.href = "";
+}
 
-    $("#uButton").fadeOut("normal", function() {
-      $("#wButton").fadeIn("normal");
-    })
-  }
+function copy() {
+  var copyText = document.getElementById("address");
 
-  function signout() {
-    localStorage.clear();
-    window.location.href = "";
-  }
+  // Select the text field
+  copyText.select();
+  copyText.setSelectionRange(0, 99999); // For mobile devices
 
-  function copy() {
-    var copyText = document.getElementById("address");
+  // Copy the text inside the text field
+  navigator.clipboard.writeText(copyText.value);
 
-    // Select the text field
-    copyText.select();
-    copyText.setSelectionRange(0, 99999); // For mobile devices
-
-    // Copy the text inside the text field
-    navigator.clipboard.writeText(copyText.value);
-
-    $("#idaddress").text($("#idaddress").text() == 'Identification Address' ? 'Copied Address!' : 'Identification Address');
-  }
+  $("#idaddress").text($("#idaddress").text() == 'Identification Address' ? 'Copied Address!' : 'Identification Address');
+}
 </script>
 
 <script>
@@ -270,20 +258,8 @@
   $("#vButton").hide();
 </script>
 
-<script>
-  // Connect to the WebSocket server (your Flask app)
-  var socket = io.connect('http://' + document.domain + ':' + location.port);
-
-  // Define a callback function to handle incoming updates
-  socket.on('update', function(data) {
-    // Handle the incoming updates and update your UI
-    console.log('Received update:', data);
-    if (data.key === localStorage.getItem('publicKey')){
-      document.getElementById('showBankBalance').innerText = data.amount;
-    }
-  });
-</script>
-
+<script src="https://cdn.resilientdb.com/resilient-sdk.js" type="module"></script>
+<script src="assets/js/script.js" type="module"></script>
 <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
   
 </body>
