--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-element elementor-element-9875d76 elementor-widget elementor-widget-text-editor" data-id="9875d76" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.8.1 - 13-11-2022 */
-.elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#818a91;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#818a91;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:left;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style>				Decentralized Banking System using Radix						</div>
+.elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#818a91;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#818a91;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:left;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style>				Decentralized Banking System using ResilientDB						</div>
 				</div>
 				<div class="elementor-element elementor-element-543ccab elementor-widget elementor-widget-text-editor" data-id="543ccab" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
@@ -629,7 +629,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										Apratim Shukla					</div>
 										<div class="elementor-element elementor-element-a1a5ad8 elementor-widget elementor-widget-text-editor" data-id="a1a5ad8" data-element_type="widget" data-widget_type="text-editor.default">
 											<div class="elementor-widget-container">
-												FullStack Developer and Team Lead, Apratim was responsible for setting up collaboration via GitHub, designing, coding, and testing both the applications from scratch and subsequently deploying Radix-Debitable on a DigitalOcean VPS with Cloudflare DNS and Ethereum-Debitable via Ngrok tunnel.			
+												FullStack Developer and Team Lead, Apratim was responsible for setting up collaboration via GitHub, designing, coding, and testing both the applications from scratch and subsequently deploying ResilientDB-Debitable on a DigitalOcean VPS with Cloudflare DNS and Ethereum-Debitable via Ngrok tunnel.			
 											</div>
 										</div>			
 
@@ -741,7 +741,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-a8b6a83 elementor-widget elementor-widget-text-editor" data-id="a8b6a83" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					Backend Developer and lead smart contract developer, Manjunath was responsible for designing and coding the lending and borrowing system of Radix-Debitable. He was also responsible for exploring the same for the Ethereum version of Debitable.</div>
+					Backend Developer and lead smart contract developer, Manjunath was responsible for designing and coding the lending and borrowing system of ResilientDB-Debitable. He was also responsible for exploring the same for the Ethereum version of Debitable.</div>
 				</div>
 					</div>
 		</div>
@@ -775,7 +775,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-220b3aa elementor-widget elementor-widget-text-editor" data-id="220b3aa" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					System Architect and chief planner, Rohith was responsible for planning out the system, laying out the key components for Radix-Debitable and Ethereum-Debitable. He was also responsible for ensuring that timelines were met and peak performance was achieved.</div>
+					System Architect and chief planner, Rohith was responsible for planning out the system, laying out the key components for ResilientDB-Debitable and Ethereum-Debitable. He was also responsible for ensuring that timelines were met and peak performance was achieved.</div>
 				</div>
 					</div>
 		</div>
